# sentience

./: .gitignore  Cargo.toml  Makefile  README.md  go.mod  justfile  lexer.go  lexer_test.go  pyproject.toml  setup.py  test_srai_integration.py  token.go
cmd/: main.go  main_test.go
docs/: overview.md  spec.md
examples/: reflector.sent  sentience_core_demo.rs  srai_sentience_integration.py
internal/parser/: lexer.go  parser.go  parser_test.go  token.go
internal/runtime/: context.go  eval.go  eval_test.go
internal/types/: ast.go  types_test.go  version.go
python/sentience_core/: __init__.py  srai_integration.py
src/: context.rs  eval.rs  lexer.rs  lib.rs  main.rs  parser.rs  python_bridge.rs  types.rs
src/sentience_core/: ast.rs  canonicalizer.rs  executor.rs  hasher.rs  mod.rs  parser.rs  runtime.rs
