[package]
name = "sentience"
version = "0.2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
atty = "0.2"
tracing = "0.1"
sha2 = "0.10"
hex = "0.4"
unicode-normalization = "0.1"

# Python bindings
pyo3 = { version = "0.21", features = ["extension-module"] }
numpy = "0.21"

[lib]
name = "sentience_core"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "sentience-repl"
path = "src/main.rs"

[[example]]
name = "sentience_core_demo"
path = "examples/sentience_core_demo.rs"
